--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/LER0ever/WSAOSC
+package: github.com/AOSC-Dev/WSAOSC
 import:
 - package: github.com/lxn/walk
 - package: github.com/lxn/win
