--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,15 @@
 language: go
-go: 1.7
+sudo: required
+go:
+  - 1.7.3
+os:
+  - linux
 
-before_install:
-    - sudo apt-get -y install p7zip-full
-
-scripts:
-    - curl https://glide.sh/get | sh
-    - go get github.com/akavel/rsrc
-    - glide install
-    - rsrc -manifest WSAOSC.exe.manifest -ico aosc.ico WSAOSC.syso
-    - env GOOS=windows GOARCH=amd64 go build
-
-before_deploy:
-    - mkdir -p WSAOSC
-    - mv WSAOSC.exe WSAOSC
-    - zip -r WSAOSC.zip WSAOSC
-    - ls -l
-
-deploy:
-    skip_cleanup: true
-    provider: releases
-    file:
-        - WSAOSC.zip
-    on:
-        tags: true
-        repo: AOSC-Dev/WSAOSC
+script:
+  - export GOOS=windows
+  - export GOARCH=amd64
+  - go get github.com/iovxw/downloader
+  - go get github.com/lxn/walk
+  - go get github.com/lxn/win
+  - go get golang.org/x/net/html
+  - go get golang.org/x/sys
