ng: add icon and version info.

--- a/WSAOSC.vcxproj.filters
+++ b/WSAOSC.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="main.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource.rc" />
+  </ItemGroup>
 </Project>
