vsproj: require os version 10.

--- a/WSAOSC.vcxproj
+++ b/WSAOSC.vcxproj
@@ -81,6 +81,7 @@
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>libvcruntime.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>vcruntime.lib</IgnoreSpecificDefaultLibraries>
+      <MinimumRequiredVersion>10</MinimumRequiredVersion>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
